Bug 1177335 - Skip resampling if the time difference of touches is less than 2ms.